CHANGES.txt - 2009-06-15
------------------------

CHANGES IN CUPS V1.4.0

	- Localization updates (STR #3223)
	- The USB backend on Mac OS X did not cleanly cancel a job.
	- The network backends now set the connecting-to-device printer-state-
	  reasons value when looking up the address and copying the print data
	  for consistency.
	- The scheduler now supports the com.apple.print.recoverable-warning
	  reason on all platforms.


CHANGES IN CUPS V1.4rc1

	- The PPD compiler documentation was missing information on localization
	  (STR #3212)
	- The IPP backend now reconnects after every request when talking to
	  printers that claim IPP support but only use HTTP/1.0.
	- The PPD compiler crashed when both "Resolution" and "Group foo Option
	  Resolution" were specified in the .drv file.
	- The PPD compiler's #if/#elif/#else/#endif did not work for undefined
	  variables (STR #3210)
	- Static libraries could not be installed by a non-root user on systems
	  needing a ranlib program (STR #3209)
	- The scheduler incorrectly always tried to copy Kerberos credentials
	  for print jobs.
	- Updated the Spanish localization (STR #3204)
	- The scheduler crashed when getting the default paper size from
	  libpaper (STR #3205, STR #3206)
	- The PPD compiler now defines six variables: CUPS_VERSION,
	  CUPS_VERSION_MAJOR, CUPS_VERSION_MINOR, CUPS_VERSION_PATCH,
	  PLATFORM_NAME, and PLATFORM_ARCH (STR #3203)
	- Fixed a whitespace skipping bug in cupsRasterInterpretPPD.
	- The scheduler did not return HTTP 403 (Forbidden) for authenticated
	  users that were not authorized to do IPP operations (STR #3193)
	- The scheduler did not report more than 8 Product strings from a PPD
	  file.  Some PPD files have as many as 24.
	- ppdOpen*() could crash if a keyword had no value string (something
	  that cupstestppd looks for...)
	- cupsLangDefault() did not return the correct language on Mac OS X.
	- The Mac OS X USB backend did not handle aborted or stalled pipe